--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>แบบฝึกหัด</h3>
         <ol>
             <li><a href="work1.html">งานที่ 1:JQuery</a></li>
-            <li>งานที่ 2</li>
+            <li><a href="work2.html">งานที่ 2</a></li>
             <li>งานที่ 3</li>
             <li>งานที่ 4</li>
             <li>งานที่ 5</li>
