--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ol>
             <li><a href="work1.html">งานที่ 1:JQuery</a></li>
             <li><a href="work2.html">งานที่ 2</a></li>
-            <li>งานที่ 3</li>
+            <li><a href="work3.html">งานที่ 3</a></li>
             <li>งานที่ 4</li>
             <li>งานที่ 5</li>
         </ol>
