--- a/work5.html
+++ b/work5.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Work5:React Native app</title>
 </head>
 <body>
-    
+    <h1 style="text-align: center;">Work5:React Native app</h1>
+    <div style="display: flex; flex-direction: row; justify-content: space-between;">
+        <div style="position: relative; width: 30%;">
+            <h3>ภาพตัวอย่าง</h3>
+            <img src="/img/Screenshot_2024-02-23-18-18-49-57_f73b71075b1de7323614b647fe394240.jpg" alt="" width="100%" style="align-items: center;">
+        </div>
+        <div style="position: relative; width: 30%;">
+            <h3>videoตัวอย่าง</h3>
+            <video autoplay muted style="width: 100%;">
+                <source src="img/Record_2024-02-23-18-19-02.mp4" type="video/mp4"></source>
+            </video>
+        </div>
+    </div>
+    <div data-snack-id="@bassball389/work6" data-snack-platform="web" data-snack-preview="true" data-snack-theme="light" style="overflow:hidden;background:#fbfcfd;border:1px solid var(--color-border);border-radius:4px;height:505px;width:100%"></div>
+<script async src="https://snack.expo.dev/embed.js"></script>
 </body>
 </html>
