--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <li><a href="work2.html">งานที่ 2:VR-360</a></li>
             <li><a href="work3.html">งานที่ 3:VueJS</a></li>
             <li><a href="work4.html">งานที่ 4:React</a></li>
-            <li>งานที่ 5</li>
+            <li><a href="work5.html">งานที่ 5:React Native app</a></li>
+            <li><a href="work5.html">งานที่ 6:Firebase</a></li>
+
         </ol>
         <hr>
         <div class="row">
