--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <li><a href="work3.html">งานที่ 3:VueJS</a></li>
             <li><a href="work4.html">งานที่ 4:React</a></li>
             <li><a href="work5.html">งานที่ 5:React Native app</a></li>
-            <li><a href="work6r.html">งานที่ 6:Firebase</a></li>
+            <li><a href="work6r.html">งานที่ 6:Firebase Vue</a></li>
+            <li><a href="work6.html">งานที่ 6:Firebase React</a></li>
+
 
         </ol>
         <hr>
